fixed the whitespace when scrolling the playlists at small width bug

--- a/src/sass/components/_playlists.scss
+++ b/src/sass/components/_playlists.scss
@@ -15,12 +15,14 @@
 
 .Playlists-Container {
   // border: 2px solid red;
+  width: 100vw;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   max-width: 1200px;
+  overflow: hidden;
 }
 
 ///////////////////////////////////  TITLE / HEADER  //////////////////////////////////
